--- a/info.yaml
+++ b/info.yaml
@@ -1,9 +1,9 @@
 # Tiny Tapeout project information
 project:
-  title:        "ASIC"      # Project title
-  author:       "ASIC"      # Your name
-  discord:      "ASIC"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  "ASIC"      # One line description of what your project does
+  title:        "CPU"      # Project title
+  author:       "Malek"      # Your name
+  discord:      "malek.cpu"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  description:  "Célian8bits"      # One line description of what your project does
   language:     "VHDL"  # other examples include Verilog, SystemVerilog, Amaranth, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
@@ -21,16 +21,31 @@ project:
   #          the shuttle and VHDL support may be dropped for future shuttles if we see low usage.
   source_files:
     - "top.vhdl"
-    - "compteur.vhdl"
+    - "Accu_register.vhd"
+    - "Carry_register.vhd"
+    - "Ins_register.vhd"
+    - "Prog_counter.vhd"
+    - "R1_register.vhd"
+    - "UAL.vhd"
+    - "UART_fifoed_send_V1.vhd"
+    - "UC.vhd"
+    - "boot_loader.vhd"
+    - "byte_2_word.vhd"
+    - "fsm.vhd"
+    - "ram.vhd"
+    - "uart_recv.vhd"
+    - "ut1.vhd"
+    - "word_2_byte.vhd"
+    
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
   # Inputs
   ui[0]: "clk"
   ui[1]: "rst_n"
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
+  ui[2]: "uio_in"
+  ui[3]: "ena"
+  ui[4]: "ui_in"
   ui[5]: ""
   ui[6]: ""
   ui[7]: ""
