--- a/info.yaml
+++ b/info.yaml
@@ -21,21 +21,21 @@ project:
   #          the shuttle and VHDL support may be dropped for future shuttles if we see low usage.
   source_files:
     - "top.vhdl"
-    - "Accu_register.vhd"
-    - "Carry_register.vhd"
-    - "Ins_register.vhd"
-    - "Prog_counter.vhd"
-    - "R1_register.vhd"
-    - "UAL.vhd"
-    - "UART_fifoed_send_V1.vhd"
-    - "UC.vhd"
-    - "boot_loader.vhd"
-    - "byte_2_word.vhd"
-    - "fsm.vhd"
-    - "ram.vhd"
-    - "uart_recv.vhd"
-    - "ut1.vhd"
-    - "word_2_byte.vhd"
+    - "Accu_register.vhdl"
+    - "Carry_register.vhdl"
+    - "Ins_register.vhdl"
+    - "Prog_counter.vhdl"
+    - "R1_register.vhdl"
+    - "UAL.vhdl"
+    - "UART_fifoed_send_V1.vhdl"
+    - "UC.vhdl"
+    - "boot_loader.vhdl"
+    - "byte_2_word.vhdl"
+    - "fsm.vhdl"
+    - "ram.vhdl"
+    - "uart_recv.vhdl"
+    - "ut1.vhdl"
+    - "word_2_byte.vhdl"
     
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
