--- a/info.yaml
+++ b/info.yaml
@@ -20,7 +20,7 @@ project:
   # WARNING: VHDL support in Tiny Tapeout is experimental. The template may get changes during
   #          the shuttle and VHDL support may be dropped for future shuttles if we see low usage.
   source_files:
-    - "top.vhdl"
+    - "top.v"
     - "Accu_register.vhdl"
     - "Carry_register.vhdl"
     - "Ins_register.vhdl"
